# local-transcriber

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  MAC_RELEASE.md  README.ja.md  README.md  START_HERE.txt  START_HERE_MAC.txt  STORE_SUBMISSION.md  build-macos.sh  build-windows.cmd  package-msix.cmd  pyproject.toml  run.cmd  run.ps1
.github/: FUNDING.yml
.github/workflows/: build-macos.yml
app/: __init__.py  apple_intelligence.py  config.py  desktop.py  discord_presence.py  exporters.py  jobs.py  llm_manager.py  main.py  model_manager.py  summarizer.py  system_info.py  transcriber.py
app/static/: app.js  index.html  styles.css
assets/: app-icon.icns
desktop/: backend.spec  main.js  package-lock.json  package.json  prepare_store_manifest.py
desktop/apple-intelligence-helper/: README.md  main.swift
docs/: CLOUD-MAC-BUILD.md  DISCORD-PRESENCE.md  RELEASE-0.5.0.md
scripts/: capture_store_screenshots.mjs  capture_summary_screenshots.mjs  generate_app_icons.py  generate_promo_images.mjs  refresh_store_brand_mark.swift  start_capture_server.cmd
store-assets/screenshots/: CAPTIONS.md
tests/: test_api.py  test_apple_engine.py  test_discord_presence.py  test_exporters.py  test_llm_manager.py  test_store_manifest.py  test_summarizer.py  test_summary_api.py  test_system_info.py  test_transcriber.py
