[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-transcriber"
version = "0.4.0"
description = "A small local web service for transcribing audio and video files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "faster-whisper>=1.1,<2",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<9",
]
summary = [
    "llama-cpp-python>=0.3,<0.5",
]
desktop = [
    "pyinstaller>=6.14,<7",
]
assets = [
    "pillow>=10,<13",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
